creation-compte-chauffeur etape2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="entrerPermis">permis de conduire</string>
     <string name="entrerCI">pièce d\'identité</string>
     <string name="entrerPhoto">photo</string>
+    <string name="couleurVehicule">couleur du vehicule</string>
 
     //Messages
     <string name="addUserSuccess">Client ajouté avec succès !</string>
