Création interfaces APi chauffeur, client et Admin Modification et corrections classes java et page xml Implémentation de la création d'un compte client = fonctionnel.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="entrerPermis">permis de conduire</string>
     <string name="entrerCI">pièce d\'identité</string>
     <string name="entrerPhoto">photo</string>
+
+    //Messages
+    <string name="addUserSuccess">Client ajouté avec succès !</string>
+    <string name="addUserFailure">Erreur durant la création du compte</string>
 </resources>
