- Transformation en relative layout page_réservation.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="welcome_mag">Bienvenue sur mon application</string>
     <string name="points_mag">points :0</string>
 
+    //Page Réservation compte client
+    <string name="titrePageReservationClient">Ma Réservation</string>
+
     //Créer compte Client
     <string name="creerSonCompteClientTitre">Créez votre compte</string>
     <string name="creerSonCompteBouton">Créez mon compte</string>
