Feat/retrofil controller (#4)
* création de nouveau compte reservation et trajet et chauffeur
création des methode delete et udpdate et all

* Creation TrajetApi et corrections PajeTrajet et Trajet

* modification des comptes chauffeurs et reservations
creation des comptes chauffeurs et reservations

* Creation étapes de création de compte client

* j'ai fais la page reserationet chauffeur et client et la page paiement et la pae admin
en suite j'ai fais des verifiations mais le ccode il ne fonctione pas

* Correction error pour run l'application à cause de null pointer sur CreationCompteClient

* WIP parcours de réservation et de création de compte client et chauffeur.

* Correction compte administrateur et page paiement .xml;
Réimplémentation de la liste chauffeur en recyclerView dans MainActivity3

* Création interfaces APi chauffeur, client et Admin
Modification et corrections classes java et page xml
Implémentation de la création d'un compte client = fonctionnel.

* - Enregistrement d'un client en base de données;
- Création parcours client jusqu'à réservation et consultation des réservation
-> Erreur quand click sur boutons;
- Méthode Callback pour afficher des données depuis la base de données;
- Création des pages java et xml Mon Compte - Paramètres : à remplir
- Création des pages java et xml Mon Compte - Ma liste de réservation : à remplir
- Amélioration de la page de connexion : ajout d'un bouton Sign up et d'un text view "Créer mon compte";
- Refacto du code par la création de méthodes dédiées pour les button click et l'enregistrement en base de données d'un client lors d'une création de compte.

* Feat/parcours client et connexion (#3)

* - Transformation en relative layout page_réservation.xml

* Rangement du projet:
- Fichiers .xml de démarcation entre chacune des classes chauffeur, client, commons, administrateur et viewHolder;

* Rangement du projet:
- Continuation dans le parcours de réservation client.
- AJ

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,30 @@
     <string name="app_name">Mobil_APP</string>
     <string name="welcome_mag">Bienvenue sur mon application</string>
     <string name="points_mag">points :0</string>
+
+    //Page Réservation compte client
+    <string name="titrePageReservationClient">Ma Réservation</string>
+
+    //Créer compte Client
+    <string name="creerSonCompteClientTitre">Créez votre compte</string>
+    <string name="creerSonCompteBouton">Créez mon compte</string>
+    <string name="entrezNom">nom</string>
+    <string name="entrezPrenom">prénom</string>
+    <string name="entrezLogin">login</string>
+    <string name="entrezMdp">mot de passe</string>
+    <string name="confirmezMdp">Confirmer mot de passe</string>
+    <string name="entrezMail">mail</string>
+    <string name="entrezTel">n° de téléphone</string>
+
+    //Créer compte Chauffeur
+    <string name="creerSonCompteChauffeurTitre">Créez un nouveau compte Chauffeur</string>
+    <string name="entrerImmatriculation">immatriculation</string>
+    <string name="entrerTypeVehicule">marque et série du véhicule</string>
+    <string name="entrerPermis">permis de conduire</string>
+    <string name="entrerCI">pièce d\'identité</string>
+    <string name="entrerPhoto">photo</string>
+
+    //Messages
+    <string name="addUserSuccess">Client ajouté avec succès !</string>
+    <string name="addUserFailure">Erreur durant la création du compte</string>
 </resources>
