feat(ViewHolder_demande_Reservation) - Création des affichages des listes de chauffeurs et de réservations concernant le parcours client et le parcours chauffeur; - Implémentation des services pour les requêtes; - Création d'une enum pour le statut de la resa; - Création de classes et de layout pour avancée sur les différents parcours; - Création de holderViews et d'Adapter pour ces derniers; - Création de la réservation pour les clients; - Création d'un getter de date et d'heure pour les pages d'accueil de compte;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     //Messages
     <string name="addUserSuccess">Client ajouté avec succès !</string>
     <string name="addUserFailure">Erreur durant la création du compte</string>
+
+    //Commons
+    <string name="btnRetour">Retour</string>
 </resources>
